Aligned logo, fixed up CSS

--- a/BTTV/BTTVapp/static/BTTVapp/style.css
+++ b/BTTV/BTTVapp/static/BTTVapp/style.css
@@ -1,3 +1,6 @@
-#title-search {
+#index-title {
+    text-align: center;
+}
+#search {
     text-align: center;
 }
